# ChangeLog for dev-ruby/ruby-oembed
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  17 Mar 2011; Hans de Graaff <graaff@gentoo.org> ruby-oembed-0.8.1.ebuild:
  Add x86 keyword.

*ruby-oembed-0.8.1 (11 Mar 2011)

  11 Mar 2011; Hans de Graaff <graaff@gentoo.org> +ruby-oembed-0.8.1.ebuild,
  +metadata.xml:
  Initial import.
