@@ -2,13 +2,15 @@
 Hash: SHA256
 
 DIST ruby-oembed-0.8.1.gem 37888 RMD160 a5c5e701b5af38365f1c12e1a808f1c474188201 SHA1 2d90ed8716da575a6bad3159a358e4c41cf46adf SHA256 92dab3a871bbb69d7f6df5fb9b2a7286e3c297bf725e0a8189df033864f64148
+DIST ruby-oembed-0.8.3.gem 40448 RMD160 dc778376986eb8f7244a1cf770f7bfe4098c2944 SHA1 af7d802002365ec4cba63c71209ea4729bf261a0 SHA256 c26e525129584230c4c5be10b60eface390c3c51cbf6d8ca5bccfb535a76e9db
 EBUILD ruby-oembed-0.8.1.ebuild 723 RMD160 b3fdeb2c7b09a20fc3b40954039c7156010989f4 SHA1 64203c1326cf640e57c8da1e132a305cf4bac9b1 SHA256 7cab72b13b46233d1625d9d384b5abcfa57168709810bb8636e5d79772abe013
-MISC ChangeLog 364 RMD160 cdeff0b64fccb734cd8ebd44a32cab5420ab8939 SHA1 337c7cfa7e9b8d7b0a36fc6b0344d7eef86f167d SHA256 a0e24e102315f72371dd64dc4c2624e66451a8838fc47c43e66f3a76a2845623
+EBUILD ruby-oembed-0.8.3.ebuild 630 RMD160 5b2a02ae472208d83f4585bca1ccc66e8a0b16e6 SHA1 40e1112b41cdaf2f23928cbfc6603ba0e3accbc4 SHA256 4db87872c53dd64587913e998d1c2677c76e87ff5e700a32f3c2ec9861b92f02
+MISC ChangeLog 492 RMD160 73da3512e2a69f2f1747096e5db1facdb5c23e10 SHA1 dbb93fe19ad762e86fb7c72bf248d8aeb1f5ae3d SHA256 a15ce5a682ff9cce2d64263fe059f3b5b47459210f0df491fcaeb1552a4b975e
 MISC metadata.xml 201 RMD160 bbf7920d9809941fb024d20016dbe2fb9f15ff97 SHA1 e629d21795e99a77bd0a6aded1a153fd12d5b2c5 SHA256 c90b12c6600840878686d4544dbc51d97b0715add76b40d9400415cdef6324ad
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk2CIVcACgkQrnu0mw69JkoxEgD+Le2M3m5wGt8+WRG01R6LRGWP
-rdSAo0dXUaeEk1S+l6wA/2gYU7pMAfHoVbRVHmvkanx12eR2XeaSPNe7VZ8mOdM6
-=k5CI
+iF4EAREIAAYFAk4Nw8QACgkQiIP6VqMIqNcD4QD9EXJ4YxEw4f6LNSLFLneBpqau
+PtEOIaEyo0isPtrMSwUA/iaDGqs4bgm9v8qncbRnqymSGZc5UGViO8aWK1cXA2X2
+=pwop
 -----END PGP SIGNATURE-----
