@@ -2,6 +2,11 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*ruby-oembed-0.8.3 (01 Jul 2011)
+
+  01 Jul 2011; Hans de Graaff <graaff@gentoo.org> +ruby-oembed-0.8.3.ebuild:
+  Version bump.
+
   17 Mar 2011; Hans de Graaff <graaff@gentoo.org> ruby-oembed-0.8.1.ebuild:
   Add x86 keyword.
 
